src/test/deca/context/valid/compatible_typeunaryoperation.deca
// Description:
//    operations binaires valides
//
// Resultats:
//    aucune erreur
//
// Historique:
//    cree le 08/01/2023

{
    int i= 2; int r; float f=1.0; boolean b =true;
    println(f);
    f=-i;
    println(f);

    b=!b;
}
