src/test/deca/context/invalid/operations_binaires_incomp.deca
// Description:
//    Uncompatible type for binary operation
//
// Resultats:
//    Uncompatible type for binary operation
//
// Historique:
//    cree le 08/01/2023

{
    boolean a=true; int b=5; float c=3.0; String s="GL24";
    b=a+c;
    b=a/c;
    b=a%c;
    b= c+b;
    a=(s!=b);

}
